consensus improvements